zerocopy-derive/tests/ui-msrv/union_into_bytes_cfg/union_into_bytes_cfg.stderr
error[E0433]: failed to resolve: could not find `zerocopy` in the list of imported crates
  --> tests/ui-msrv/union_into_bytes_cfg/union_into_bytes_cfg.rs:20:10
   |
20 | #[derive(IntoBytes)]
   |          ^^^^^^^^^ could not find `zerocopy` in the list of imported crates
   |
   = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
